--- a/src/pages/anasayfa/Anasayfa.scss
+++ b/src/pages/anasayfa/Anasayfa.scss
@@ -15,6 +15,7 @@
         .glide__slide {
           position: relative;
           width: 100%;
+          height: 100%;
           height: calc(100vh - 140px);
 
           @media (max-width: 1024px) {
