--- a/src/App.css
+++ b/src/App.css
@@ -1,144 +1,115 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-
-.roboto-thin {
-  font-family: "Roboto", sans-serif;
+.poppins-thin {
+  font-family: "Poppins", sans-serif;
   font-weight: 100;
   font-style: normal;
 }
 
-.roboto-light {
-  font-family: "Roboto", sans-serif;
+.poppins-extralight {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.poppins-light {
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-style: normal;
 }
 
-.roboto-regular {
-  font-family: "Roboto", sans-serif;
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
-.roboto-medium {
-  font-family: "Roboto", sans-serif;
+.poppins-medium {
+  font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: normal;
 }
 
-.roboto-bold {
-  font-family: "Roboto", sans-serif;
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-bold {
+  font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-style: normal;
 }
 
-.roboto-black {
-  font-family: "Roboto", sans-serif;
+.poppins-extrabold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.poppins-black {
+  font-family: "Poppins", sans-serif;
   font-weight: 900;
   font-style: normal;
 }
 
-.roboto-thin-italic {
-  font-family: "Roboto", sans-serif;
+.poppins-thin-italic {
+  font-family: "Poppins", sans-serif;
   font-weight: 100;
   font-style: italic;
 }
 
-.roboto-light-italic {
-  font-family: "Roboto", sans-serif;
+.poppins-extralight-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: italic;
+}
+
+.poppins-light-italic {
+  font-family: "Poppins", sans-serif;
   font-weight: 300;
   font-style: italic;
 }
 
-.roboto-regular-italic {
-  font-family: "Roboto", sans-serif;
+.poppins-regular-italic {
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-style: italic;
 }
 
-.roboto-medium-italic {
-  font-family: "Roboto", sans-serif;
+.poppins-medium-italic {
+  font-family: "Poppins", sans-serif;
   font-weight: 500;
   font-style: italic;
 }
 
-.roboto-bold-italic {
-  font-family: "Roboto", sans-serif;
+.poppins-semibold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.poppins-bold-italic {
+  font-family: "Poppins", sans-serif;
   font-weight: 700;
   font-style: italic;
 }
 
-.roboto-black-italic {
-  font-family: "Roboto", sans-serif;
+.poppins-extrabold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: italic;
+}
+
+.poppins-black-italic {
+  font-family: "Poppins", sans-serif;
   font-weight: 900;
   font-style: italic;
 }
-.lato-thin {
-  font-family: "Lato", serif;
-  font-weight: 100;
-  font-style: normal;
-}
-
-.lato-light {
-  font-family: "Lato", serif;
-  font-weight: 300;
-  font-style: normal;
-}
-
-.lato-regular {
-  font-family: "Lato", serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.lato-bold {
-  font-family: "Lato", serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.lato-black {
-  font-family: "Lato", serif;
-  font-weight: 900;
-  font-style: normal;
-}
-
-.lato-thin-italic {
-  font-family: "Lato", serif;
-  font-weight: 100;
-  font-style: italic;
-}
-
-.lato-light-italic {
-  font-family: "Lato", serif;
-  font-weight: 300;
-  font-style: italic;
-}
-
-.lato-regular-italic {
-  font-family: "Lato", serif;
-  font-weight: 400;
-  font-style: italic;
-}
-
-.lato-bold-italic {
-  font-family: "Lato", serif;
-  font-weight: 700;
-  font-style: italic;
-}
-
-.lato-black-italic {
-  font-family: "Lato", serif;
-  font-weight: 900;
-  font-style: italic;
-}
-
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Lato", serif;
-
   ::-webkit-scrollbar {
     width: 8px;
   }
@@ -171,9 +142,6 @@
 }
 
 /* Tablet */
-
-
-
 
 ul,
 ol {
