--- a/src/components/Anasayfa/teamListCard/TeamListCard.scss
+++ b/src/components/Anasayfa/teamListCard/TeamListCard.scss
@@ -9,18 +9,17 @@
 
   .img {
     width: 100%;
-    height: 8.7rem;
-
+    height: auto;
     @media (max-width: 780px) {
-      height: 11rem;
+      // height: 11rem;
     }
 
     @media (max-width: 500px) {
-      height: 13rem;
+      // height: 13rem;
     }
     img {
       width: 100%;
-      height: 100%;
+      aspect-ratio: 5 / 4;
       border-radius: 10px;
     }
   }
@@ -42,8 +41,8 @@
         -webkit-box-orient: vertical;
         overflow: hidden;
         text-overflow: ellipsis;
-        line-clamp: 2; /* Modern browsers için */
-        -webkit-line-clamp: 2; /* Safari ve eski tarayıcılar için */
+        line-clamp: 1; /* Modern browsers için */
+        -webkit-line-clamp: 1; /* Safari ve eski tarayıcılar için */
         white-space: normal;
       }
 
