--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -59,7 +59,8 @@
       align-items: center;
 
       .logo {
-        height: 40px;
+        padding-top: 5px;
+        height: 50px;
         width: auto;
         img {
           width: auto;
@@ -100,7 +101,8 @@
 
       .headerWrapper {
         .logo {
-          height: 30px;
+          padding-top: 5px;
+          height: 38px;
         }
       }
       .hamburger {
