--- a/src/components/infoCard/infoCard.scss
+++ b/src/components/infoCard/infoCard.scss
@@ -26,6 +26,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    text-align: center;
     gap: 0.4rem;
   }
 
