--- a/src/components/listCard/ListCard.scss
+++ b/src/components/listCard/ListCard.scss
@@ -8,13 +8,12 @@
   .img {
     width: 100%;
     height: auto;
-    max-height: 250px;
     border-radius: 15px;
 
     img {
       border-radius: 15px;
       width: 100%;
-      height: 100%;
+      aspect-ratio: 5 / 4;
     }
   }
 
