--- a/src/pages/projeDetaySayfası/ProjeDetay.scss
+++ b/src/pages/projeDetaySayfası/ProjeDetay.scss
@@ -16,16 +16,16 @@
 
     .mainSectionSide {
       display: flex;
-      gap: 2rem;
+      gap: 3rem;
 
       .product-gallery {
-        width: 55%;
+        width: 50%;
         display: flex;
         flex-direction: column;
         .single-img {
           img {
             width: 100%;
-            height: 370px;
+            aspect-ratio: 5 / 4;
           }
         }
         .product-thump {
@@ -36,13 +36,17 @@
             border: 1px solid transparent;
           }
         }
+
+        .hide-thump {
+          display: none;
+        }
       }
       .detays {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, auto);
         gap: 0.7rem 0.4rem;
-        width: calc(45% - 2rem);
+        width: calc(50% - 3rem);
         position: relative; /* Çizgiyi yerleştirmek için gerekli */
       }
 
@@ -380,7 +384,7 @@
   }
 
   @media (max-width: 425px) {
-    gap: 2rem;
+    gap: 3rem;
     .projectName {
       height: 200px;
       .bannerText {
