--- a/src/pages/iletisim/Iletisim.scss
+++ b/src/pages/iletisim/Iletisim.scss
@@ -36,6 +36,11 @@
           display: flex;
           gap: 0.5rem;
           align-items: center;
+          .phoness {
+            display: flex;
+            flex-direction: column;
+            gap: 0.7rem;
+          }
         }
 
         .medyas {
