--- a/src/pages/projeler/Projeler.scss
+++ b/src/pages/projeler/Projeler.scss
@@ -63,6 +63,11 @@
               }
             }
           }
+
+          .selected {
+            background-color: rgb(215, 215, 215);
+            border-radius: 5px;
+          }
         }
       }
     }
