--- a/src/pages/adminPanel/AdminProjeDuzenle.scss
+++ b/src/pages/adminPanel/AdminProjeDuzenle.scss
@@ -40,10 +40,10 @@
         position: relative;
         width: 120px;
         height: 120px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
+        // border: 1px solid #ddd;
+        border-radius: 12px;
         overflow: hidden;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        // box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         cursor: grab;
       }
 
