--- a/src/pages/anasayfa/Anasayfa.scss
+++ b/src/pages/anasayfa/Anasayfa.scss
@@ -215,15 +215,19 @@
           }
         }
 
-        a {
-          padding: 12px 15px 12px 15px;
-          color: whitesmoke;
-          background-color: black;
-          border-radius: 8px;
-
-          @media (max-width: 1024px) {
+        .button {
+          width: 30%;
+          a {
+            width: 100%;
             padding: 12px 15px 12px 15px;
-            font-size: 0.8rem;
+            color: whitesmoke;
+            background-color: black;
+            border-radius: 8px;
+
+            @media (max-width: 1024px) {
+              padding: 12px 15px 12px 15px;
+              font-size: 0.8rem;
+            }
           }
         }
       }
