--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,6 +17,7 @@
       .headerTopWrapper {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         span {
           color: whitesmoke;
           font-size: 0.85rem;
