--- a/src/pages/Categories/Categories.scss
+++ b/src/pages/Categories/Categories.scss
@@ -10,6 +10,53 @@
       grid-template-columns: repeat(4, 1fr); /* 3 sütun */
       gap: 1rem; /* Elemanlar arası boşluk */
       column-gap: 1rem;
+
+      .categorycard {
+        width: 100%;
+        aspect-ratio: 5 / 4;
+        border-radius: 20px;
+
+        .categoryContent {
+          border-radius: 20px;
+          width: 100%;
+          height: 100%;
+          position: relative;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          h3 {
+            z-index: 10;
+            color: whitesmoke;
+          }
+
+          .backgroundImg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 20px;
+
+            img {
+              width: 100%;
+              height: 100%;
+              border-radius: 20px;
+            }
+          }
+
+          &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: rgba(0, 0, 0, 0.5); // Siyah yarı saydam arka plan
+            z-index: 5; // h3 başlığının altına, ama image'in üstüne
+            border-radius: 20px;
+          }
+        }
+      }
     }
   }
 
@@ -38,7 +85,7 @@
       gap: 3rem;
 
       .categoryCardsContent {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
       }
     }
   }
